# OpenJury

./: .gitignore  .pre-commit-config.yaml  README.md  TODOs.md  pyproject.toml
.github/workflows/: run-pytest.yml
data/: finnish-contexts.csv  french-contexts.csv  german-contexts.csv  spanish-contexts.csv  swedish-contexts.csv
examples/: README_translated_AH.md  translate_arena_hard.py
llm-judge-eval/: main.py
llm-judge-eval/prompts/: prompt.txt
llmjudgeeval/: evaluate.py  generate.py  generate_and_evaluate.py  generate_and_evaluate_context_completion.py  m_arenahard.py  utils.py
llmjudgeeval/instruction_dataset/: __init__.py  m_arenahard.py
llmjudgeeval/prompts/: prompt.txt
openjury/: _logging.py  arenas_utils.py  config.py  estimate_elo_ratings.py  eval_runtime.py  evaluate.py  generate.py  generate_and_evaluate.py  generate_and_score_criteria.py  repro.py  utils.py
openjury/bradley_terry/: __init__.py  analysis.py  model.py
openjury/criteria/: __init__.py  defaults.py  io.py  pipeline.py  schema.py  scorer.py
openjury/instruction_dataset/: __init__.py  m_arenahard.py  mt_bench.py  (+1 more)
scripts/: annotate_instruction_quality.py  translate_arena_hard.py
slurmpilot_scripts/: launch_evaluation.py  launch_generation_and_evaluation.py
tests/: test_bradley_terry_model.py  test_criteria.py  test_estimate_elo_ratings.py  test_generate_and_evaluate.py  test_generate_and_evaluate_context_completion.py  test_generate_and_score_criteria.py  test_mt_bench_101.py  test_mt_bench_downloads.py  test_regexp.py  test_repro.py  test_rubric.py  test_rubrics.py
(+52 files in other folders)
