[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-judge-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "huggingface-hub>=0.34.4",
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langchain-together>=0.3.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "rich>=14.1.0",
    "slurmpilot @ git+https://github.com/geoalgo/slurmpilot.git@main",
]

[tool.setuptools.packages.find]
include = ["openjury*"]
exclude = ["slurmpilot_scripts*"]

[project.optional-dependencies]
vllm = ["vllm==0.10.2"]
dev = ["black>=25.1.0", "pytest>=8.4.2"]
